card item details nesnesi güncellendi